--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,8 +1,25 @@
 pipeline {
-    agent any
+    agent ('GOL'){
+        
+    }
+    triggers {
+     //   cron('H * * * *')
+        pollSCM('* * * * *')
+        tools {
+        maven 'apache-maven-3.0.1' 
+        }
+        }
+     parameters {
+        string(name: 'PERSON', defaultValue: 'Jenkins', description: 'Who should I say hello to?')
+        choice(name: 'CHOICE', choices: ['package', 'clean package'], description: 'Pick something')
+        password(name: 'PASSWORD', defaultValue: 'jen123', description: 'Enter a password')
+        }
     stages {
         stage('Build') {
             steps {
+                echo "Hello ${params.PERSON}"
+                echo "Pick ${params.CHOICE}"
+                echo "Enter ${params.PASSWORD}"
                 // Get some code from a GitHub repository
                 git 'https://github.com/Navi-g/sample-java-programs.git'
 
