--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,5 @@
 pipeline {
-    agent ('GOL'){
-        
-    }
+    agent any
     triggers {
      //   cron('H * * * *')
         pollSCM('* * * * *')
