--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                 // echo "Pick ${params.CHOICE}"
                 // echo "Enter ${params.PASSWORD}"
                 // Get some code from a GitHub repository
-                git branch : 'master' url: 'https://github.com/Navi-g/sample-java-programs.git'
+                git branch : 'master', url: 'https://github.com/Navi-g/sample-java-programs.git'
 
                 // Run Maven on a Unix agent.
                 sh "mvn clean package"
