--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         }
         success {
             archiveArtifacts artifacts: '**/target/*.jar', followSymlinks: false
-            junit '**/Test-*.xml'
+            // junit '**/Test-*.xml'
             mail body: 'Build is completed', from: 'navi@outlook.com', replyTo: 'nk@gmail.in', subject: 'BUILD STATUS'+env.BUILD_ID, to: 'navi@jenkins'
         }
     }
