--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {label 'UBN'} 
-    triggers {cron '* * * * *'}
+     triggers { pollSCM('* * * * *') }
     stages {
         stage('Stage 1-SCM') {
             steps {
